plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.144'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
    maven { url = 'https://maven.parchmentmc.org' }   // было без "maven."
    maven { url = 'https://maven.neoforged.net/releases' }
}

neoForge {
    version = neo_version
    parchment {
        mappingsVersion = parchment_mappings_version
        minecraftVersion = parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }
        data {
            data()
            programArguments.addAll '--mod', mod_id, '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', ''
            logLevel = org.slf4j.event.Level.DEBUG
            jvmArgument "-Xmx4G"
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    // NB: НЕ добавлять org.spongepowered:mixin processor — под NeoForge миксины
    // работают в официальном (mojang) неймспейсе, refmap не нужен. AP ищет
    // searge/notch-маппинги, которых тут нет, и падает на @Inject (serverTick).
    // сюда позже: GeckoLib/AzureLib, JEI (localRuntime), и т.д.
}

// ───────────────────────── Headless self-test движка формул ─────────────────────────
// SelfTest проверяет ядро доски резонанса (Expr/Evaluator/GameSolver/
// ChalkboardSubmissionValidator/Serde) чистой Java, без запуска Minecraft:
// размерностный и числовой счёт, конфликты, анти-инфляция, серверная
// авторитетность и решаемость головоломок на всех сложностях.
// Запуск: ./gradlew selfTest   (падение = exit code 1)
// При желании вешается на сборку: tasks.named('check') { dependsOn 'selfTest' }
tasks.register('selfTest', JavaExec) {
    group = 'verification'
    description = 'Headless-тест движка формул доски резонанса (без запуска Minecraft)'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.gonzotech.chalkboard.core.SelfTest'
    // Класс печатает отчёт сам; логи Gradle от него не нужны.
    standardOutput = System.out
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
        minecraft_version      : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        neo_version            : neo_version,
        neo_version_range      : neo_version_range,
        loader_version_range   : loader_version_range,
        mod_id                 : mod_id,
        mod_name               : mod_name,
        mod_license            : mod_license,
        mod_version            : mod_version,
        mod_authors            : mod_authors,
        mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}
